fixed spacing issue with background image and search bar on index page

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -32,3 +32,7 @@ p {
 .light {
     font-weight: normal;
 }
+
+#background-img {
+    margin-bottom: 3em;
+}
